--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "C:/Users/Jose/Google Drive/Code/arduino/orcharduino/.pioenvs/uno/firmware.elf",
+            "executable": "c:/Users/Jose/Google Drive/Code/arduino/orcharduino/.pioenvs/uno/firmware.elf",
             "toolchainBinDir": "C:/Users/Jose/.platformio/packages/toolchain-atmelavr/bin",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -24,7 +24,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "C:/Users/Jose/Google Drive/Code/arduino/orcharduino/.pioenvs/uno/firmware.elf",
+            "executable": "c:/Users/Jose/Google Drive/Code/arduino/orcharduino/.pioenvs/uno/firmware.elf",
             "toolchainBinDir": "C:/Users/Jose/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
         }
